# VT_labs

./: .gitignore
.github/workflows/: lab4.yml
csa/: .gitignore  README.md
csa/.github/workflows/: lab4.yml
csa/lab4/: Makefile  isa.py  machine.py  pyproject.toml  pytest.ini  translator.py
csa/lab4/examples/: cat.fs  double_precision.fs  double_precision.fth  execution_token.fs  hello_char.fth  hello_pstr.fs  hello_pstr.fth  hello_user_name.fs  hello_user_name.fth  print_int.fs  prob1.fs  sort.fs  sort_input.txt  vector_demo.fs  vector_demo.fth  vector_ops.fs  vector_scalar_add.fs  vector_scalar_add.fth  vector_vector_add.fs  vector_vector_add.fth
csa/lab4/golden/: cat.yml  double_precision.yml  execution_token.yml  golden_test.py  hello_char.yml  hello_pstr.yml  hello_user_name.yml  print_int.yml  prob1.yml  sort.yml  update_goldens.py  vector_demo.yml  vector_ops.yml  vector_scalar_add.yml  vector_vector_add.yml
csa/lab4/tests/: test_examples.py
java/lab1/: README.md
java/lab2/: README.md
java/lab5/: README.md
java/lab6/: README.md
java/lab7/: README.md
opi/opi3/: .gitignore  README_ANT.md  build-jar.xml  build.properties  build.xml  pom.xml  svn-ignore.txt
web/lab1/: README.md
web/lab2/: README.md
web/lab3/: README.md
web/lab4/: README.md
алгоритмы и структуры данных/: README.md
алгоритмы и структуры данных/task1/: README.md  task1.cpp
алгоритмы и структуры данных/task2/: README.md  task2.cpp
алгоритмы и структуры данных/task3/: README.md  task3.cpp
алгоритмы и структуры данных/task4/: README.md  task4.cpp
(+21 files in other folders)
