[project]
name = "lab4-forth-risc"
version = "0.1.0"
description = "CSA Lab4"
requires-python = ">=3.14"
dependencies = [
    "pytest",
    "pyyaml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true